--- a/src/restaurantordersduplicatefx/FXMLDocument.fxml
+++ b/src/restaurantordersduplicatefx/FXMLDocument.fxml
@@ -3,17 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="restaurantordersduplicatefx.FXMLDocumentController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" stylesheets="@newCascadeStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="restaurantordersduplicatefx.FXMLDocumentController">
    <children>
       <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <children>
@@ -122,96 +118,7 @@
                   </Button>
                </children>
             </VBox>
-            <VBox style="-fx-background-color: #02030A;" HBox.hgrow="ALWAYS">
-               <children>
-                  <HBox alignment="BOTTOM_CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label text="Restaurant Orders" textFill="#e7e5e5">
-                           <font>
-                              <Font size="24.0" />
-                           </font>
-                           <HBox.margin>
-                              <Insets bottom="40.0" left="50.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Button disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" opacity="0.0" text="Button" HBox.hgrow="ALWAYS" />
-                        <TextField fx:id="tfSearchBar" prefHeight="27.0" prefWidth="183.0" promptText=" search" style="-fx-background-color: #02030A; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;">
-                           <padding>
-                              <Insets right="20.0" />
-                           </padding>
-                           <HBox.margin>
-                              <Insets bottom="5.0" right="20.0" />
-                           </HBox.margin>
-                        </TextField>
-                     </children>
-                  </HBox>
-                  <StackPane fx:id="spChangeDisplay" prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                     <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <HBox alignment="CENTER" prefHeight="92.0" prefWidth="661.0" spacing="50.0">
-                                 <children>
-                                    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label fx:id="lblDigitOne" text="22000" textFill="#2a73ff">
-                                             <font>
-                                                <Font name="System Bold" size="26.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="lblDescriptionOne" text="Total Orders" textFill="#e7e5e5" />
-                                       </children>
-                                    </VBox>
-                                    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label fx:id="lblDigitTwo" text="1500" textFill="#26bfbc">
-                                             <font>
-                                                <Font name="System Bold" size="26.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="lblDescriptionTwo" text="Total delivered" textFill="#e7e5e5" />
-                                       </children>
-                                    </VBox>
-                                    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label fx:id="lblDigitThree" text="1000" textFill="#fa5f7e">
-                                             <font>
-                                                <Font name="System Bold" size="26.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="lblDescriptionThree" text="Peding Orders" textFill="#e7e5e5" />
-                                       </children>
-                                    </VBox>
-                                    <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <Label fx:id="lblDigitFour" text="780" textFill="#de0000">
-                                             <font>
-                                                <Font name="System Bold" size="26.0" />
-                                             </font>
-                                          </Label>
-                                          <Label fx:id="lblDescriptionFour" text="Orders on Hold" textFill="#e7e5e5" />
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </HBox>
-                              <TableView fx:id="tvDisplay" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: #02030A;" VBox.vgrow="ALWAYS">
-                                <columns>
-                                    <TableColumn fx:id="tcPre" prefWidth="59.0" />
-                                  <TableColumn fx:id="tcOne" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="170.0" text="Company Name" />
-                                  <TableColumn fx:id="tcTwo" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="84.0" text="Airport" />
-                                    <TableColumn fx:id="tcThree" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="121.0" text="Delivery Date" />
-                                    <TableColumn fx:id="tcFour" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="87.0" text="Amount" />
-                                    <TableColumn fx:id="tcFive" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="108.0" text="Status" />
-                                </columns>
-                                 <VBox.margin>
-                                    <Insets bottom="75.0" left="75.0" right="75.0" />
-                                 </VBox.margin>
-                              </TableView>
-                           </children>
-                        </VBox>
-                     </children>
-                  </StackPane>
-               </children>
-            </VBox>
+            <StackPane fx:id="spSubScene" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #02030A;" HBox.hgrow="ALWAYS" />
          </children>
       </HBox>
    </children>
